syntax = "proto3";
package odachin.auth;
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";

service AuthService {
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc GetOwnInfo(google.protobuf.Empty) returns (GetOwnInfoResponse);
}

enum Role {
  PARENT = 0; // 親
  CHILD = 1;  // 子供
}

message CreateUserRequest {
  string user_id = 1 [ (buf.validate.field).string.min_len = 1 ];
  string name = 2 [ (buf.validate.field).string.min_len = 1 ];
  string email = 3 [ (buf.validate.field).string.email = true ];
  string password = 4 [ (buf.validate.field).string.min_len = 8 ];
  Role role = 5 [ (buf.validate.field).enum.defined_only = true ];
}

message CreateUserResponse { string token = 1; }

message UpdateUserRequest {
  optional string name = 1;
  optional string email = 2;
  optional bytes profile_image = 3;
}

message LoginRequest {
  string user_id = 1 [ (buf.validate.field).string.min_len = 1 ];
  string password = 2 [ (buf.validate.field).string.min_len = 8 ];
}

message LoginResponse { string token = 1; }

message GetUserInfoRequest {
  string user_id = 1 [ (buf.validate.field).string.min_len = 1 ];
}

message GetUserInfoResponse {
  string user_id = 1;
  string name = 2;
  Role role = 3;
  optional string avatar_image_url = 4;
}

message GetOwnInfoResponse {
  string name = 1;
  string email = 2;
  optional string avater_image_url = 3;
  Role role = 4;
  string user_id = 5;
  optional uint64 family_id = 6;
}